--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src='app.js' defer></script>
+        <script src='app.js' type='module' defer></script>
         <link href="./styles.css", type "text/css", rel="stylesheet" />
         <title>Logger</title>
     </head>
     <body class='main' id='body'>
-        <div id='firstTimer'>
-            Project 1:
+        <div class='container'>
+            <img id="circle01" src="svg/circle01.svg" alt="nothing" style="width:25%">
+            <div class='center' id='firstTimer'>Project 1:</div>
         </div>
-        <div id='secondTimer'>
-            Project 2:
+        <div class='container'>
+            <img id="circle02" src="svg/circle01.svg" alt="nothing" style="width:25%">
+            <div class='center' id='secondTimer'>Project 1:</div>
         </div>
-        <div id='thirdTimer'>
-            Project 3:
+        <div class='container'>
+            <img id="circle03" src="svg/circle01.svg" alt="nothing" style="width:25%">
+            <div class='center' id='thirdTimer'>Project 1:</div>
         </div>
     </body>
 </html>
